# dsba-itop2022-hw

./: CMakeLists.txt  GlobalVariables.h  additionalwindow.cpp  additionalwindow.h  additionalwindow.ui  addwindow.cpp  addwindow.h  addwindow.ui  attributes.h  authorinfo.cpp  authorinfo.h  authorinfo.ui  filters.h  filterwindow.cpp  filterwindow.h  filterwindow.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectinfo.cpp  projectinfo.h  projectinfo.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui  speaker.h  speakerswindow.cpp  speakerswindow.h  speakerswindow.ui  speakerwindow.cpp  speakerwindow.h  speakerwindow.ui  talkswindow.cpp  talkswindow.h  talkswindow.ui  video.h  videowindow.cpp  (+2 more)
